--- a/index.html
+++ b/index.html
@@ -1,63 +1,30 @@
+<h1>test</h1>
+<hr/>
+git clone https://github.com/wancy86/wancy86.github.io
+
 <div>
-https://help.github.com/categories/github-pages-basics/
-https://pages.github.com/
+<a href="https://help.github.com/categories/github-pages-basics/">https://help.github.com/categories/github-pages-basics/</a>
+<a href="https://pages.github.com/">https://pages.github.com/</a>
 </div>
 <div id="current-category-articles" class="js-hide-during-search">
-    <div class="content-header small">
-        <h6 class="breadcrumbs">
-                Categories /
-                GitHub Pages Basics
-              </h6>
-        <div class="search-form small right">
-            <script id="quicksearch-results-template" type="text/mustache">
-                <div class="header">
-                    <a class="initial quicksearch-seemore" href="/search?q=">See more results</a>
-                </div>
-                [[#entries]]
-                <tr class="article">
-                    <td class="info">
-                        <a href="[[url]]" class="js-articles-quicksearch-link">[[title]]</a>
-                    </td>
-                </tr>
-                [[/entries]]
-            </script>
-            <form accept-charset="UTF-8" action="/search" id="articles-search" method="get">
-                <div style="margin:0;padding:0;display:inline">
-                    <input name="utf8" type="hidden" value="✓">
-                </div>
-                <div class="outer">
-                    <div class="inner fade-label">
-                        <input type="text" name="q" id="quicksearch-query" class="js-articles-quicksearch" placeholder="How can we help?">
-                        <div class="search-form-btn">
-                            <button><span class="octicon octicon-search"></span></button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <div class="autocomplete-results" style="display: none;">
-                <table class="result-group" border="0" cellpadding="0" cellspacing="0">
-                </table>
-            </div>
-        </div>
-    </div>
     <ul class="chevron">
         <li class="article">
-            <a href="/articles/what-is-github-pages" class="km-article-link">What is GitHub Pages?</a>
+            <a href="https://help.github.com/articles/what-is-github-pages" class="km-article-link">What is GitHub Pages?</a>
         </li>
         <li class="article">
-            <a href="/articles/user-organization-and-project-pages" class="km-article-link">User, Organization, and Project Pages</a>
+            <a href="https://help.github.com/articles/user-organization-and-project-pages" class="km-article-link">User, Organization, and Project Pages</a>
         </li>
         <li class="article">
-            <a href="/articles/creating-pages-with-the-automatic-generator" class="km-article-link">Creating Pages with the automatic generator</a>
+            <a href="https://help.github.com/articles/creating-pages-with-the-automatic-generator" class="km-article-link">Creating Pages with the automatic generator</a>
         </li>
         <li class="article">
-            <a href="/articles/creating-project-pages-manually" class="km-article-link">Creating Project Pages manually</a>
+            <a href="https://help.github.com/articles/creating-project-pages-manually" class="km-article-link">Creating Project Pages manually</a>
         </li>
         <li class="article">
-            <a href="/articles/securing-your-github-pages-site-with-https" class="km-article-link">Securing your GitHub Pages site with HTTPS</a>
+            <a href="https://help.github.com/articles/securing-your-github-pages-site-with-https" class="km-article-link">Securing your GitHub Pages site with HTTPS</a>
         </li>
         <li class="article">
-            <a href="/articles/further-reading-on-github-pages" class="km-article-link">Further reading on GitHub Pages</a>
+            <a href="https://help.github.com/articles/further-reading-on-github-pages" class="km-article-link">Further reading on GitHub Pages</a>
         </li>
     </ul>
 </div>
