--- a/ng-shoppingcart/index.html
+++ b/ng-shoppingcart/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>京东购物</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="http://cdn.bootcss.com/jquery/1.10.1/jquery.js"></script>
-    <script src="http://cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/1.10.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="app.js"></script>
 </head>
 
