--- a/arttemplate_test.html
+++ b/arttemplate_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src='http://common.cnblogs.com/script/jquery.js'></script>
+    <script src='https://common.cnblogs.com/script/jquery.js'></script>
     <script src='https://wancy86.github.io/js/arttemplate-native.js'></script>
     <script>
     $(function() {
