--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<h1>test</h1>
-<hr/>
-git clone https://github.com/wancy86/wancy86.github.io
+<html>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="page-header">
+                    <h1>Example page header <small>Subtext for header</small></h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <a href="bishi.html">笔试题1</a>
+            </div>
+            <div class="col-md-4">
+                <a href="bishi2.html">笔试题2</a>
+            </div>
+            <div class="col-md-4">
+                <a href="hnt.html">汉诺塔</a>
+            </div>
+            <div class="col-md-4">
+                <a href="jishi.html">机试题</a>
+            </div>
+            <div class="col-md-4">
+                <a href="mindtest.html">编程思维测试</a>
+            </div>
+            <div class="col-md-4">
+                <a href="test.html">test</a>
+            </div>
+            <div class="col-md-4">
+                <a href="random_name.html">Random Name</a>
+            </div>
+            <div class="col-md-4">
+                <a href="ng-shoppingcart/index.html">Shopping Cart - Angularjs</a>
+            </div>
+            <div class="col-md-4">
+                <a href="SQLSERVER性能调优实践.html">SQLSERVER性能调优实践</a>
+            </div>
+            <div class="col-md-4">
+                <a href="[译]AngularJS中DOM操作.html">[译]AngularJS中DOM操作</a>
+            </div>
+            <div class="col-md-4">
+                <a href="[译]AngularJS $apply, $digest, 和$evalAsync的比较.html">[译]AngularJS $apply, $digest, 和$evalAsync的比较</a>
+            </div>
+            <div class="col-md-4">
+                <a href="bishi.html">笔试题1</a>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
+<!-- 
+
+<h1>Help</h1>
+<hr/> git clone https://github.com/wancy86/wancy86.github.io
 <div>
-<a href="https://help.github.com/categories/github-pages-basics/">https://help.github.com/categories/github-pages-basics/</a>
-<a href="https://pages.github.com/">https://pages.github.com/</a>
+    <a href="https://help.github.com/categories/github-pages-basics/">https://help.github.com/categories/github-pages-basics/</a>
+    <a href="https://pages.github.com/">https://pages.github.com/</a>
 </div>
 <div id="current-category-articles" class="js-hide-during-search">
     <ul class="chevron">
@@ -28,3 +90,4 @@ git clone https://github.com/wancy86/wancy86.github.io
         </li>
     </ul>
 </div>
+ -->
