--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
-                    <h1>Example page header <small>Subtext for header</small></h1>
+                    <h1>CoMark Blog<small> - @misc</small></h1>
                 </div>
             </div>
         </div>
@@ -26,13 +26,13 @@
                 <a href="bishi2.html">笔试题2</a>
             </div>
             <div class="col-md-4">
-                <a href="hnt.html">汉诺塔</a>
-            </div>
-            <div class="col-md-4">
                 <a href="jishi.html">机试题</a>
             </div>
             <div class="col-md-4">
                 <a href="mindtest.html">编程思维测试</a>
+            </div>
+            <div class="col-md-4">
+                <a href="hnt.html">[转]汉诺塔</a>
             </div>
             <div class="col-md-4">
                 <a href="test.html">test</a>
@@ -53,7 +53,7 @@
                 <a href="[译]AngularJS $apply, $digest, 和$evalAsync的比较.html">[译]AngularJS $apply, $digest, 和$evalAsync的比较</a>
             </div>
             <div class="col-md-4">
-                <a href="bishi.html">笔试题1</a>
+                <a href="sql assist/SqlAssist manual.pdf">SqlAssist manual.pdf</a>
             </div>
         </div>
     </div>
