--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                 <a href="sql assist/SqlAssist manual.pdf">SqlAssist manual.pdf</a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Tool</h3>
+            </div>
+            <div class="col-md-4">
+                <a href="tool/index.html">列表比较工具</a>
+            </div>
+        </div>
     </div>
 </body>
 
