--- a/tool/index.html
+++ b/tool/index.html
@@ -58,7 +58,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3>Tools</h3>
+            </div>
+            <div class="page-header">
+                <h1>Tools <small>arry compare</small></h1>
+                <ul class="nav nav-pills">
+                    <li role="presentation" class="active"><a href="index.html">Comparing</a></li>
+                    <li role="presentation"><a href="rm_duplicate.html">RM Duplicate</a></li>
+                    <li role="presentation"><a href="#">Messages</a></li>
+                </ul>
             </div>
         </div>
         <div class="row">
