--- a/tool/rm_duplicate.html
+++ b/tool/rm_duplicate.html
@@ -29,6 +29,7 @@
                     content_right.push(content_left[i]);
                 }
             }
+            content_right.sort();
             $('#right').val(content_right.join('\n'));
         });
     });
