--- a/tool/index.html
+++ b/tool/index.html
@@ -64,7 +64,7 @@
                 <ul class="nav nav-pills">
                     <li role="presentation" class="active"><a href="index.html">Comparing</a></li>
                     <li role="presentation"><a href="rm_duplicate.html">RM Duplicate</a></li>
-                    <li role="presentation"><a href="#">Messages</a></li>
+                    <li role="presentation"><a href="reg_replace.html">Reg Replace</a></li>
                 </ul>
             </div>
         </div>
