--- a/tool/reg_replace.html
+++ b/tool/reg_replace.html
@@ -43,12 +43,27 @@
             <div class="col-md-12">
             </div>
             <div class="page-header">
-                <h1>Tools <small>unique</small></h1>
+                <h1>Tools <small>reg replace</small></h1>
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="index.html">Comparing</a></li>
-                    <li role="presentation" class="active"><a href="rm_duplicate.html">RM Duplicate</a></li>
-                    <li role="presentation"><a href="reg_replace.html">Reg Replace</a></li>
+                    <li role="presentation"><a href="rm_duplicate.html">RM Duplicate</a></li>
+                    <li role="presentation" class="active"><a href="reg_replace.html">Reg Replace</a></li>
                 </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3><label ><input type="checkbox">tbw to sql</label></h3>
+                <label ><input type="checkbox">'' to '</label>
+                <label ><input type="checkbox">'#S#'' to @</label>
+                <label ><input type="checkbox">add declaring</label>
+            </div>
+            <div class="col-md-6">
+                <h3><label ><input type="checkbox">sql to tbw</label></h3>
+                <label ><input type="checkbox">' to ''</label>
+                <label ><input type="checkbox">@ to ''#S#''</label>
+                <label ><input type="checkbox">del declaring</label>
             </div>
         </div>
         <div class="row">
