--- a/tool/rm_duplicate.html
+++ b/tool/rm_duplicate.html
@@ -45,7 +45,7 @@
             <div class="page-header">
                 <h1>Tools <small>unique</small></h1>
                 <ul class="nav nav-pills">
-                    <li role="presentation"><a href="index.html">Comparing</a></li>
+                    <li role="presentation"><a href="arr_compare.html">Comparing</a></li>
                     <li role="presentation" class="active"><a href="rm_duplicate.html">RM Duplicate</a></li>
                     <li role="presentation"><a href="reg_replace.html">Reg Replace</a></li>
                 </ul>
