--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3>Tool</h3>
             </div>
             <div class="col-md-4">
-                <a href="tool/index.html">列表比较工具</a>
+                <a href="tool/arr_compare.html">列表比较工具</a>
             </div>
         </div>
     </div>
