--- a/tool/rm_duplicate.html
+++ b/tool/rm_duplicate.html
@@ -22,16 +22,21 @@
         $('#execute').click(function() {
             var content_left = $('#left').val().split("\n");
             var content_right = [];
+            var content_mid = [];
             for (var i = 0; i < content_left.length; i++) {
-                content_left[i]=(content_left[i]).trim();
+                content_left[i] = (content_left[i]).trim();
                 if (!content_right.contains(content_left[i])) {
                     content_right.push(content_left[i]);
+                } else if (!content_mid.contains(content_left[i])) {
+                    content_mid.push(content_left[i]);
                 }
             }
             content_right.sort();
             $('#left').parent().find('span').text(content_left.length);
             $('#right').parent().find('span').text(content_right.length);
+            $('#mid').parent().find('span').text(content_mid.length);
             $('#right').val(content_right.join('\n'));
+            $('#mid').val(content_mid.join('\n'));
         });
     });
     </script>
@@ -52,12 +57,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <p>Original List: <span style="color:blue;"></span></p>
+            <div class="col-md-4">
+                <p>Original List: (<span style="color:blue;">0</span>)</p>
                 <textarea style="resize:none;width:100% ;height:200px;" id="left"></textarea>
             </div>
-            <div class="col-md-6">
-                <p>Unique List: <span style="color:blue;"></span></p>
+            <div class="col-md-4">
+                <p>Duplicate Item List: (<span style="color:blue;">0</span>)</p>
+                <textarea style="resize:none;width:100% ;height:200px;" id="mid"></textarea>
+            </div>
+            <div class="col-md-4">
+                <p>Unique List: (<span style="color:blue;">0</span>)</p>
                 <textarea style="resize:none;width:100% ;height:200px;" id="right"></textarea>
                 <button class="pull-right btn btn-success" style="margin-top: 5px;" id="execute">Execute</button>
             </div>
