--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="bishi.html">笔试题1</a>
+                <a href="pages/interviewee/bishi.html">笔试题1</a>
             </div>
             <div class="col-md-4">
-                <a href="bishi2.html">笔试题2</a>
+                <a href="pages/interviewee/bishi2.html">笔试题2</a>
             </div>
             <div class="col-md-4">
-                <a href="jishi.html">机试题</a>
+                <a href="pages/interviewee/jishi.html">机试题</a>
             </div>
             <div class="col-md-4">
-                <a href="mindtest.html">编程思维测试</a>
+                <a href="pages/interviewee/mindtest.html">编程思维测试</a>
             </div>
             <div class="col-md-4">
-                <a href="hnt.html">[转]汉诺塔</a>
+                <a href="pages/interviewee/hanoi.js">汉诺塔</a>
             </div>
             <div class="col-md-4">
-                <a href="test.html">test</a>
+                <a href="pages/test.html">test</a>
             </div>
             <div class="col-md-4">
-                <a href="random_name.html">Random Name</a>
+                <a href="pages/random_name.html">Random Name</a>
             </div>
             <div class="col-md-4">
-                <a href="ng-shoppingcart/index.html">Shopping Cart - Angularjs</a>
+                <a href="projects/ng-shoppingcart/index.html">Shopping Cart - Angularjs</a>
             </div>
             <div class="col-md-4">
-                <a href="SQLSERVER性能调优实践.html">SQLSERVER性能调优实践</a>
+                <a href="pages/SQLSERVER性能调优实践.html">SQLSERVER性能调优实践</a>
             </div>
             <div class="col-md-4">
-                <a href="[译]AngularJS中DOM操作.html">[译]AngularJS中DOM操作</a>
+                <a href="pages/[译]AngularJS中DOM操作.html">[译]AngularJS中DOM操作</a>
             </div>
             <div class="col-md-4">
-                <a href="[译]AngularJS $apply, $digest, 和$evalAsync的比较.html">[译]AngularJS $apply, $digest, 和$evalAsync的比较</a>
+                <a href="pages/[译]AngularJS $apply, $digest, 和$evalAsync的比较.html">[译]AngularJS $apply, $digest, 和$evalAsync的比较</a>
             </div>
             <div class="col-md-4">
-                <a href="sql assist/SqlAssist manual.pdf">SqlAssist manual.pdf</a>
+                <a href="config_bak/sql assist/SqlAssist manual.pdf">SqlAssist manual.pdf</a>
             </div>
         </div>
         <div class="row">
@@ -61,7 +61,7 @@
                 <h3>Tool</h3>
             </div>
             <div class="col-md-4">
-                <a href="tool/arr_compare.html">列表比较工具</a>
+                <a href="pages/tool/arr_compare.html">列表比较工具</a>
             </div>
         </div>
     </div>
