--- a/pages/tool/rm_duplicate.html
+++ b/pages/tool/rm_duplicate.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Tools</title>
-    <script src="../js/jquery.js"></script>
-    <script src="../js/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../js/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../js/bootstrap/css/bootstrap-theme.min.css">
+    <script src="../../assets/js/jquery.js"></script>
+    <script src="../../assets/js/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../assets/js/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/js/bootstrap/css/bootstrap-theme.min.css">
     <script type="text/javascript">
     Array.prototype.contains = function(v) {
         var result = 0;
